--- a/static/sdk.css
+++ b/static/sdk.css
@@ -20,9 +20,11 @@ iframe {
 }
 
 #viewport {
-    width: 100%;
-    height: 100%;
-    position: relative;
+    left: 5;
+    right: 5;
+    top: 5;
+    bottom: 5;
+    position: absolute;
 }
 
 
