--- a/static/sdk.css
+++ b/static/sdk.css
@@ -20,11 +20,9 @@ iframe {
 }
 
 #viewport {
-    left: 5;
-    right: 5;
-    top: 5;
-    bottom: 5;
-    position: absolute;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 
